@@ -7,6 +7,9 @@ gphoto2 2.5.0.1
    like e.g.:
    gphoto2 -p /store_00010001/DCIM/100D7000/DSC_0001.JPG
 
+ * -L --quiet  now prints a list of all files, 1 per line.
+ * -l --quiet  now prints a list of all folders, 1 per line.
+
 gphoto2 2.5.0
 
  * Added "--keep" and "--no-keep" options for capture tethered
